add footer and contact content

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="dropshadow" id="greeting">
             <h1>Hi,<br />I'm Pine.</h1>
         </div>
-        <div id="container">
+        <div class="row" id="container">
             <div id="real-content">
                 <div class="content" id="intro">
                     <h2>I Am</h2>
@@ -229,13 +229,12 @@
                 </div>
                 <div class="content" id="contact">
                     <h2>Contact</h2>
-                    <p>Feel free to drop me email at: <a href="mailto:mepine@gmail.com">mepine@gmail.com</a></p>
+                    <ul id="contact-form">
+                        <li>Email: <a href="mailto:mepine@gmail.com">mepine@gmail.com</a></li>
+                        <li>Twitter: <a href="http://twitter.com/mepine" target="_blank">mepine</a></li>
+                    </ul>
+                    <p>Feel free to have a talk. I'm looking forward to it.</p>
                 </div>
-            </div>
-            <div id="footerdiv">
-                <footer>
-                    
-                </footer>
             </div>
             <div id="toc">
                 <ul class="root">
@@ -349,6 +348,13 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="row">
+            <footer>
+                <div id="footer-text">
+                    <p>© 2013 Pine Du</p>
+                </div>
+            </footer>
         </div>
     </div>
 </body>
