--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <h2>I Am</h2>
                     <h5>A Chinese guy,</h5>
                     <p>born in Tianjin and mostly living in Beijing now.</p>
-                    <p>I love Tianjin, the architectures, rivers, food, daily life, human culture. Beijing is also cool, in a different way, with bussinesses, information, vision, passtion. I'm currently looking for a balance of the two sides.</p>
+                    <p>I love Tianjin, the architectures, rivers, food, daily life, human culture. Beijing is also cool, in a different way, with bussinesses, information, vision, passion. I'm currently looking for a balance of the two sides.</p>
                     <h5>A designer,</h5>
                     <p>sensitive to problems in life, visible or hidden, and passionate to solve them.</p>
                     <p>I enjoy life, all real things in life, food, travel, work, photography, reading, music, all of them. Sometimes there're points that bothers, from <em>where to put my Kindle</em> to <em>a document's readability</em>. People may get annoyed, even angry. I'm usually curious to find out where the issue is and figure out the solution.</p>
