change breadtrip paragraph, remove bad words

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                     <p>During the short period of time I made 3 changes: the landing page, to play a big role doing promotions; the community relationships and the website structure, which lead the product to social media direction.</p>
                     <p>2 reasons why I left.</p>
                     <p>One, I have to work my own idea out, and put a lot of time there, so I probably couldn't do full time job in the short future.</p>
-                    <p>Two, I couldn't feel enough startup culture, which is about passion, collaboration, discussion, vision. Work, getting things done, is fundamental, but having the goal understood by everyone and running as a team, can bring much more value than that.</p>
+                    <p>Two, I was and am still seeking for a hardcore startup culture, which is about passion, collaboration, discussion, vision. Work, getting things done, is fundamental, but having the goal understood by everyone and running as a team, can bring much more value than that.</p>
                     <span class="eraloc" id="present" ></span>
                     <h5>PRESENT</h5>
                     <h3>Independent Designer</h3>
