--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <!-- <script src="http://code.jquery.com/jquery-1.9.1.js"></script> -->
     <script src="jquery-1.9.1.min.js" type="text/javascript" charset="utf-8"></script>
     <script src="master.js" type="text/javascript" charset="utf-8"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-40400426-1', 'pine.im');
+      ga('send', 'pageview');
+
+    </script>
 </head>
 <body>
     <div id="main">
