add portrait pic to enable websites grab the pic

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <div id="main">
         <div class="dropshadow" id="greeting">
             <h1>Hi,<br />I'm Pine.</h1>
+            <img id="portrait-pic" src="images/portrait.jpg" alt="Pine Du">
         </div>
         <div class="row" id="container">
             <div id="real-content">
