--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <p>I love Tianjin, the architectures, rivers, food, daily life, human culture. Beijing is also cool, in a different way, with bussinesses, information, vision, passion. I'm currently looking for a balance of the two sides.</p>
                     <h5>A designer,</h5>
                     <p>sensitive to problems in life, visible or hidden, and passionate to solve them.</p>
-                    <p>I enjoy life, all real things in life, food, travel, work, photography, reading, music, all of them. Sometimes there're points that bothers, from <em>where to put my Kindle</em> to <em>a document's readability</em>. People may get annoyed, even angry. I'm usually curious to find out where the issue is and figure out the solution.</p>
+                    <p>I enjoy life, all real things in life, food, travel, work, photography, reading, music, all of them. Sometimes I got bugged/irritated by the tiny bits, from <em>where to put my Kindle</em> to <em>a document's readability</em>. People may get annoyed, even angry. I'm usually curious to find out where the issue is and figure out the solution.</p>
                     <h5>A craftman,</h5>
                     <p>having the enthusiasm on making great <em>things</em>. </p>
                     <p>For <em>things</em> I mean hundreds of kinds of things, chairs, cups, keys, books, phones, bags, applications, websites, all. They have little in common, very little. That little thing is, the feel. When you touch it, use it, interact with it, it's so wonderful that how it embeds in your life is, just the way you need. Therefore, people use it, keep it for years, decades, even generations, they think it's so beautiful, meaningful, that they never throw it away even it's old. They call it antique.</p>
@@ -146,7 +146,7 @@
                     <p>
                         <img class="inline-pics" src="images/dreamlogger.jpg" alt="Dream Logger">
                     </p>
-                    <p>Dream Logger is an iPad blogging app for blogbus.com. I made the app in my spare time. The requirement came from a girl, whom I love. Once she was injured and had to lie in bed and wait for recovery for almost 3 months. At that time, iPad was the best device she could use. Unfortunately blogbus.com, the blog service she uses, doesn't work on iPad, and there's no 3rd-party app supporting it. So I made this.</p>
+                    <p>Dream Logger is an iPad application for blogbus.com I made using spare time. The inspiration came from a girl I once loved. At one time, she was seriously injured and therfore confined to bed for almost 3 months. At that time, iPad was the best device she could use. Unfortunately blogbus.com, the blog service she uses, doesn't work on iPad, and there's no 3rd-party app supporting it. So I made this.</p>
                     <p>While making it, I figured out there's writing experience that this app could help engage. So I did some special design with paper texture and letterpress type effects, which got many positive feedbacks from user.</p>
                     <p>You can check the app page <a href="https://itunes.apple.com/app/dream-logger/id452981536" target="_blank">here</a>.</p>
                     <span class="eraloc" id="breadtrip" ></span>
